--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/jdmar3-comp426/a02-cpysleeper.git"
   },
-  "author": "Panyi Chen",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jdmar3-comp426/a02-cpysleeper/issues"
